Rename Office 365 to Microsoft 365
Rename Office 365 to Microsoft 365 to follow suite on Microsoft's
rebranding.

--- a/AZ-104 Microsoft Azure Administrator/2.2. Governance - Azure AD.md
+++ b/AZ-104 Microsoft Azure Administrator/2.2. Governance - Azure AD.md
@@ -1,6 +1,6 @@
 # Azure AD
 
-## Introduction to Active Directory
+## Azure Active Directory overview
 
 - Characteristics
   - AD is cloud-based and geo-distributed
@@ -11,7 +11,7 @@
     - Each tenant is segmented off on its own.
     - Provides ability to give permissions from one tenant to another for certain accounts.
   - Identity & Access
-    - Can be identity/access provider for Microsoft accounts for e.g. Office 365.
+    - Can be identity/access provider for Microsoft accounts for e.g. Office 365 [1] .
     - In-house & third party developed applications can also leverage this service.
   - Integrates with local AD
   - Provides SSO
@@ -19,6 +19,8 @@
 - Global administrator = Root
 - Can be managed by Azure Portal, Powershell/CLI, Microsoft Graph and API
   - Microsoft Graph: API product trying to creating single way of interacting with all Microsoft APIs.
+
+[1]: https://docs.microsoft.com/en-us/microsoft-365/enterprise/azure-integration
 
 ## Role Based Access Control
 
