--- a/AZ-104 Microsoft Azure Administrator/2.2.1. Governance - Azure AD - Entities.md
+++ b/AZ-104 Microsoft Azure Administrator/2.2.1. Governance - Azure AD - Entities.md
@@ -13,8 +13,8 @@
   - Authentication of the user/application during sign-in.
   - Authorization during resource access (Azure RBAC).
 - There are two types of security principals:
-  - [User principals](#users) i.e. users
-  - [Service principals](#service-principal) i.e. applications
+  - Users: See [user principals](#users).
+  - Applications: See [service principals](#service-principal).
 
 ## Users
 
@@ -93,21 +93,29 @@
 
 ## Groups
 
-- Types of groups
-  - **Assigned or Dynamic**
-    - **Assigned**: You assign users to groups manually
-    - **Dynamic**: You select various attributes to make users member of a group
-      - Dynamic query e.g. `deparment Equals marketing`
-  - **Security or Office 365**
-    - **Security groups** are for assigning permissions.
+- Used to group objects to secure them together.
+- Good for performing bulk user updates.
+- Helps to:
+  - Assign licenses to groups instead of to individually.
+  - Delegate permissions to together.
+  - Assign enterprise app access to groups.
+- Can be assigned vs dynamic:
+  - **Assigned**
+    - You assign users to groups manually.
+    - Static membership.
+  - **Dynamic**
+    - You select various attributes to make users member of a group
+    - Dynamic query e.g. `deparment Equals marketing`.
 - **Owners and members**
   - **Owners**: Can add/remove users from the group.
   - **Members**: cannot manage the group, normal permissions
 - **Expiration of groups**
   - Groups can automatically expire.
+
+### Managing groups
+
 - You manage in "Azure Directory → Groups"
   - You can assign licenses to a group where each member will get a license.
-- Good for performing bulk user updates
 - **Self-service group management**
   - **Owners manage groups** instead of administrator that manage the group for the owners.
   - Users can request to join in group with providing some business justification.
@@ -117,6 +125,19 @@
 - **Company Branding**
   - In portal: Active Directory → Users and groups → Company branding
   - Allows you to customize the pages with e.g. banner, sign-in page text, user name hint
+
+### Security vs Microsoft 365 Groups
+
+- **Security groups**
+  - Also known as **Azure AD security groups**.
+  - [Security principals](#security-principal) [1] used for assigning permissions.
+  - Analogous to Security Groups in on-prem Windows Active Directory
+- **Microsoft 365 Groups**
+  - Also known as **Unified Groups** [2] .
+  - Groups users to assign permissions to related resources [2] .
+
+[1]: https://docs.microsoft.com/en-us/microsoft-365/community/all-about-groups#what-are-azure-ad-security-groups
+[2]: https://docs.microsoft.com/en-us/microsoft-365/community/all-about-groups#what-are-microsoft-365-groups
 
 ## Devices
 
