--- a/AZ-303 Microsoft Azure Architect Technologies/3.1.1. Identities - Azure Active Directory.md
+++ b/AZ-303 Microsoft Azure Architect Technologies/3.1.1. Identities - Azure Active Directory.md
@@ -7,14 +7,17 @@
     - Add custom domain
       - All AD accounts come with `domainname.onmicrosoft.com`
       - Go to AD -> Custom Domain Names -> Add domain -> Verify domain name with a TXT record
-  - Used by (can be shared with) Office 365, Microsoft Dynamics CRM and Microsoft Intune.
+  - Used by (can be shared with) other Microsoft cloud services:
+    - Microsoft 365
+    - Microsoft Dynamics CRM
+    - Microsoft Intune
 - List of users + groups
 - Each Azure tenant has a dedicated and trusted Azure AD directory. The Azure AD directory includes the tenant's users, groups, and apps
 - HTTP/HTTPS based:
   - Queried via REST using Microsoft Graph API
   - Uses protocols like SAML, WS, OpenID and OAuth 2 for authorization
 - Other benefits
-  - Single sign-on to any cloud (Office365, salesforce, dropbox, custom ..) or on-premises web app.
+  - Single sign-on to any cloud (Microsoft 365, salesforce, dropbox, custom ..) or on-premises web app.
   - ***Self-service tools*** *(means tasks not requires an admin)*:
     - ***Self-service password management***: Users can reset heir passwords
       - Authentication methods:
@@ -23,7 +26,6 @@
       - ***Self-service group management***: Users can create groups
       - Enabled in Portal -> AD -> Self-Service Password Reset
   - Can be integrated with Windows Server Active Directory
-  - Used in Office 365, Azure and Dynamics CRM online.
   - ***Conditional access policies***
     - When this happens, Then do this
       - *(Occurences)* e.g. unknown device, e-mail user
