--- a/AZ-303 Microsoft Azure Architect Technologies/3.2.1. Networking - Hybrid Connections (Site-to-Site VPN & ExpressRoute).md
+++ b/AZ-303 Microsoft Azure Architect Technologies/3.2.1. Networking - Hybrid Connections (Site-to-Site VPN & ExpressRoute).md
@@ -38,7 +38,7 @@
 
 ## ExpressRoute
 
-- With ExpressRoute, you can establish connections to Microsoft cloud services, such as Microsoft Azure, Office 365, and CRM Online.
+- With ExpressRoute, you can establish connections to Microsoft cloud services, such as Microsoft Azure, Microsoft 365, and CRM Online.
 - ExpressRoute connections do not go over the public Internet.
   - More reliable, faster speeds, lower latencies, higher security.
 - Good for scenarios like periodic data migration, replication for business continuity, disaster recovery, and other high-availability strategies
