--- a/AZ-303 Microsoft Azure Architect Technologies/3.5.1. Authentication.md
+++ b/AZ-303 Microsoft Azure Architect Technologies/3.5.1. Authentication.md
@@ -8,7 +8,7 @@
 - Client establish its identity to a server by using a digital certificate.
 - 💡 Good as additional security for user authentication.
 - In Azure, its handled by AAD.
-- You can authenticate to e.g. custom services, Office 365, Skype for Business, API Management, SharePoint..
+- You can authenticate to e.g. custom services, Microsoft 365, Skype for Business, API Management, SharePoint..
 - Good when multiple front-ends to back-ends architecture is in place.
 - Solutions
   - *Traditionally*: Install certificate on each server to establish trust.
