--- a/AZ-303 Microsoft Azure Architect Technologies/4.1. Creating Web Applications using PaaS.md
+++ b/AZ-303 Microsoft Azure Architect Technologies/4.1. Creating Web Applications using PaaS.md
@@ -93,7 +93,7 @@
   - Move uploaded file from an SFTP or FTP server to Azure Storage.
   - Process and route orders across on-premises systems and cloud services.
   - Monitor tweets for a specific subject, analyze the sentiment, and create alerts or tasks for items that need review.
-- 200+ integrations such as Service Bus, Functions, Office 365, Oracle DB etc.
+- 200+ integrations such as Service Bus, Functions, Microsoft 365, Oracle DB etc.
   - Each connector provides triggers and/or actions specifically.
   - **Enterprise Integration Pack**
     - Handles B2B integrations, like BizTalk.
