--- a/AZ-303 Microsoft Azure Architect Technologies/4.5. Serverless Computing (Azure Functions & Logic Apps).md
+++ b/AZ-303 Microsoft Azure Architect Technologies/4.5. Serverless Computing (Azure Functions & Logic Apps).md
@@ -88,7 +88,7 @@
   - Can be extended.
   - Can be triggered time-based (recurrence scheduling)
 - 200+ built-in connectors
-  - Managed connectors: • Azure Service Bus • SQL Server • Office 365 Outlook • Azure Blob Storage • SFTP • SharePoint Online • Dynamics 365 CRM Online • FTP • Salesforce • Twitter • Azure Event Hubs • Azure Event Grid, ...
+  - Managed connectors: • Azure Service Bus • SQL Server • Microsoft Outlook • Azure Blob Storage • SFTP • SharePoint Online • Dynamics 365 CRM Online • FTP • Salesforce • Twitter • Azure Event Hubs • Azure Event Grid, ...
   - On-prem connectors: • BizTalk Server • File System • IBM DB2 • IBM Informix • MySQL • Oracle DB • PostgreSQL • SharePoint Server • SQL Server • Teradata
   - For additional cost: • Enterprise Connectors (SAP, IBM MQ..)• Integrations account connectors (B2B messages via special protocols, XML handling)
   - Each connector has specific actions
