--- a/AZ-303 Microsoft Azure Architect Technologies/5.2. Configure Message-based integration architecture.md
+++ b/AZ-303 Microsoft Azure Architect Technologies/5.2. Configure Message-based integration architecture.md
@@ -90,5 +90,13 @@
 
 ## Configure with Microsoft Graph
 
-- Unified API for Azure AD, Office 365, Windows 10 *(activities and devices)*, Microsoft Enterprise Mobility *(Microsoft Identity Manager, Microsoft Intune, Microsoft Advanced Threat Analytics, and Microsoft Defender for Identity)*
+- Unified API for Microsoft cloud services such as [1] :
+  - Azure AD
+  - Microsoft 365
+  - Windows 10 *(activities and devices)*
+  - Microsoft Enterprise Mobility *(Microsoft Identity Manager, Microsoft Intune, Microsoft Advanced Threat Analytics, and Microsoft Defender for Identity)*
+  - Dynamics 365 Business Central
+  - See Major services and features in Microsoft Graph.
 - Uses relationships such as `memberOf`
+
+[1]: https://docs.microsoft.com/en-us/graph/overview#whats-in-microsoft-graph
