--- a/AZ-304 Microsoft Azure Architect Design/2.1. SaaS services in Azure - Cognitive Services.md
+++ b/AZ-304 Microsoft Azure Architect Design/2.1. SaaS services in Azure - Cognitive Services.md
@@ -4,7 +4,7 @@
 - Expands on Microsofts machine learning APIs and enables developers to easily add intelligent features *– such as emotion and video detection; facial, speech and vision recognition; and speech and language understanding –* into their applications.
 - E.g.
   - ***Agent***: Cortana
-  - ***Applications***: Office 365, Dynamics 365, SwiftKey, Pix, Customer Service and Support
+  - ***Applications***: Microsoft 365, Dynamics 365, SwiftKey, Pix, Customer Service and Support
   - ***Services***: Bot Framework, Cognitive Services, Cortana Intelligence, Cognitive Toolkit
   - ***Infrastructure***: Azure Machine Learning, Azure N Series, FPGA
 
