--- a/AZ-304 Microsoft Azure Architect Design/4.4. App Services.md
+++ b/AZ-304 Microsoft Azure Architect Design/4.4. App Services.md
@@ -52,10 +52,13 @@
 
 - Mobile App endpoints are REST APIs.
 - Provides capabilities of:
-  - **Single sign on**: From list of Azure AD.
-  - **Offline sync**: Work offline when connectivity is not available, and synchronize with your enterprise backend systems when devices comes back online.
-    - Any data source including • SQL • Table Storage • Mongo • Document DB • any SaaS API including Office 365, Salesforce, Dynamics, or on-premises databases.
-  - **Push notifications**: You can easily hook Notification Hubs to any existing app backend.
+  - **Single sign on**
+    - From list of Azure AD.
+  - **Offline sync**
+    - Work offline when connectivity is not available, and synchronize with your enterprise backend systems when devices comes back online.
+    - Data sources include including • SQL • Table Storage • Mongo • Document DB • any SaaS API including Microsoft 365 apps, Salesforce, Dynamics, or on-premises databases.
+  - **Push notifications**
+    - Allows you to hook Notification Hubs to any existing app backend.
   - **Auto scaling**
 - Client SDKs are available to connect mobile app to a Mobile App instance for its backend data.
   - Supported for: • Xamarin Android/IOS, • Android Native, • IOS Native, • Windows Store, • Windows Phone, • .NET, • HTML
