--- a/AZ-304 Microsoft Azure Architect Design/5.4. Hybrid Cloud.md
+++ b/AZ-304 Microsoft Azure Architect Design/5.4. Hybrid Cloud.md
@@ -10,7 +10,7 @@
 ### Azure AD Connect
 
 - Provides the ability to integrate on-premises directories with Azure AD.
-- Provide single sign-on to cloud applications such as Office 365, Azure and other SaaS applications.
+- Provide single sign-on to cloud applications such as Microsoft 365, Azure and other SaaS applications.
 
 ### Azure AD Hybrid solutions
 
