--- a/AZ-400 Microsoft Azure DevOps Solutions/2. Azure DevOps Overview.md
+++ b/AZ-400 Microsoft Azure DevOps Solutions/2. Azure DevOps Overview.md
@@ -73,12 +73,29 @@
 
 - Trigger tasks in external services from Azure DevOps
   - E.g. if code is pushed => create a new card in Trello or just call a webhook
-- You can integrate with (see updated list in [official docs](https://docs.microsoft.com/en-us/azure/devops/service-hooks/overview?view=azure-devops))
-  - Build and release: [AppVeyor](https://www.appveyor.com/docs/), [Bamboo](https://confluence.atlassian.com/bamboo/enabling-webhooks-946626050.html), [Jenkins](https://docs.microsoft.com/en-us/azure/devops/service-hooks/services/jenkins?view=azure-devops), [MyGet](https://docs.myget.org/docs/reference/webhooks), [Slack](https://docs.microsoft.com/en-us/azure/devops/service-hooks/services/slack?view=azure-devops),
-  - Collaborate: [FlowDock](https://www.flowdock.com/api/integration-getting-started), [HuBot](https://hubot.github.com/docs/), [Office 365](https://docs.microsoft.com/en-us/azure/devops/service-hooks/overview#available-services)
-  - Customer support: [UserVoice](https://help.uservoice.com/hc/en-us/articles/360034994894-VSTS-Azure-DevOps-Integration), [ZenDesk](https://support.zendesk.com/hc/en-us/articles/204890268-Creating-webhooks-with-the-HTTP-target)
-  - Plan and track: [Trello](https://docs.microsoft.com/en-us/azure/devops/service-hooks/services/trello?view=azure-devops)
-  - Integrate: [Service Bus](https://docs.microsoft.com/en-us/azure/devops/pipelines/tasks/utility/publish-to-azure-service-bus?view=azure-devops), [Azure Storage](https://docs.microsoft.com/en-us/azure/azure-functions/functions-integrate-storage-queue-output-binding?tabs=csharp), [Grafana](https://docs.microsoft.com/en-us/azure/devops/service-hooks/services/grafana?view=azure-devops), [Web Hooks](https://docs.microsoft.com/en-us/azure/devops/service-hooks/services/webhooks?view=azure-devops), [Zapier](https://zapier.com/apps/webhook/integrations)
+- You can integrate with (see updated list in [official documentation](https://docs.microsoft.com/en-us/azure/devops/service-hooks/overview?view=azure-devops))
+  - Build and release: AppVeyor [1], Bamboo [2], Jenkins [3], MyGet [4], Slack [5] .
+  - Collaborate: FlowDock [6], HuBot, Office [8] .
+  - Customer support: UserVoice [9], ZenDesk [10] .
+  - Plan and track: Trello [11] .
+  - Integrate: Service Bus [12], Azure Storage [13], Grafana [14], Web Hooks [15], Zapier [16] .
+
+[1]: https://www.appveyor.com/docs/
+[2]: https://confluence.atlassian.com/bamboo/enabling-webhooks-946626050.html
+[3]: https://docs.microsoft.com/en-us/azure/devops/service-hooks/services/jenkins?view=azure-devops
+[4]: https://docs.myget.org/docs/reference/webhooks
+[5]: https://docs.microsoft.com/en-us/azure/devops/service-hooks/services/slack?view=azure-devops
+[6]: https://www.flowdock.com/api/integration-getting-started
+[7]: https://hubot.github.com/docs/
+[8]: https://docs.microsoft.com/en-us/azure/devops/service-hooks/overview#available-services
+[9]: https://help.uservoice.com/hc/en-us/articles/360034994894-VSTS-Azure-DevOps-Integration
+[10]: https://support.zendesk.com/hc/en-us/articles/204890268-Creating-webhooks-with-the-HTTP-target
+[11]: https://docs.microsoft.com/en-us/azure/devops/service-hooks/services/trello?view=azure-devops
+[12]: https://docs.microsoft.com/en-us/azure/devops/pipelines/tasks/utility/publish-to-azure-service-bus?view=azure-devops
+[13]: https://docs.microsoft.com/en-us/azure/azure-functions/functions-integrate-storage-queue-output-binding?tabs=csharp
+[14]: https://docs.microsoft.com/en-us/azure/devops/service-hooks/services/grafana?view=azure-devops
+[15]: https://docs.microsoft.com/en-us/azure/devops/service-hooks/services/webhooks?view=azure-devops
+[16]: https://zapier.com/apps/webhook/integrations
 
 ## Managing users and their access
 
