--- a/AZ-900 Microsoft Azure Fundamentals/1.3.2. IaaS vs PaaS vs SaaS.md
+++ b/AZ-900 Microsoft Azure Fundamentals/1.3.2. IaaS vs PaaS vs SaaS.md
@@ -2,9 +2,9 @@
 
 ## Three categories of cloud computing
 
-- 📝 [IaaS](#infrastructure-as-a-service-iaas), [PaaS](#platform-as-a-service-paas), [SaaS](#software-as-a-service-saas)
-- You may easily use a combination of these types of infrastructure.
-  - E.g. Office 365 on your company's computers (SaaS), VMs (IaaS) on Azure and Azure SQL Database (PaaS) to store your data.
+- 📝 [IaaS](#infrastructure-as-a-service-iaas), [PaaS](#platform-as-a-service-paas), [SaaS](#software-as-a-service-saas).
+- Allows using a combination of these types of infrastructure.
+  - E.g. [Microsoft 365 Apps](https://www.microsoft.com/en-ww/microsoft-365/business/microsoft-365-apps-for-business?market=af) on company computers (SaaS), VMs (IaaS) on Azure and Azure SQL Database (PaaS) to store your data.
 
 ### Infrastructure as a service (IaaS)
 
