--- a/AZ-900 Microsoft Azure Fundamentals/4.2. Defence in Depth.md
+++ b/AZ-900 Microsoft Azure Fundamentals/4.2. Defence in Depth.md
@@ -11,7 +11,7 @@
 ### Data
 
 - In almost all cases attackers are after data.
-- Data can be in database, stored on disk inside VMs, on a SaaS application such as Office 365 or in cloud storage.
+- Data can be in database, stored on disk inside VMs, on a SaaS application such as a Microsoft 365 app or in cloud storage.
 - Those storing and controlling access to data to ensures that it's properly secured
 - Often regulatory requirements dictates controls & processes
   - to ensure confidentiality, integrity, and availability.
