--- a/AZ-900 Microsoft Azure Fundamentals/4.4. Identity and Access (Azure AD).md
+++ b/AZ-900 Microsoft Azure Fundamentals/4.4. Identity and Access (Azure AD).md
@@ -30,7 +30,7 @@
 - Called also as **Azure AD**.
 - Cloud-based identity service.
 - Can synchronize with existing on-premises Active Directory or can be used stand-alone.
-- Allows to share identities in cloud (e.g. Office 365), mobile on-premises applications.
+- Allows to share identities in cloud (e.g. Microsoft 365), mobile on-premises applications.
 - ❗📝 No SLA for free tier, 99.9% for standard & premium
 - Some services:
   - **Authentication**.
