Update 1.2. Cloud Deployment Models (Public vs Private vs Hybrid Cloud).md
Correcting a spelling error.

--- a/AZ-900 Microsoft Azure Fundamentals/1.2. Cloud Deployment Models (Public vs Private vs Hybrid Cloud).md
+++ b/AZ-900 Microsoft Azure Fundamentals/1.2. Cloud Deployment Models (Public vs Private vs Hybrid Cloud).md
@@ -35,7 +35,7 @@
 - Cloud environment in your own datacenter
 - Provide self-service access to compute resources to users in your organization.
 - A simulation of a public cloud to users, but you remain completely responsible for the purchase and maintenance of the hardware and software services you provide.
-- Users can be external customer or speific internal departments such as Accounting or Human Resources.
+- Users can be external customer or specific internal departments such as Accounting or Human Resources.
 - **Example use case**
   - Have data that cannot be put in the public cloud e.g. because a government policy requires specific data to be kept in-country or privately.
 
