--- a/AZ-900 Microsoft Azure Fundamentals/3.1.2. Containers.md
+++ b/AZ-900 Microsoft Azure Fundamentals/3.1.2. Containers.md
@@ -80,7 +80,7 @@
 - Each micro-service is completely autonomous with no cross-dependencies.
   - Provides fault isolation: If one goes down, it does not take out all application
 - Communicate with each other using APIs
-  - Internal functionality is encapsulated
+  - Internal functionality is encapsulated (Internal implementation details of each services are encapsulated behind their interface.)
   - You'd want to reduce interdependencies and introduce orchestration / management layer in the higher level consuming application to coordinate calls & combines results
 - 💡 Good for:
   - High release velocity
