--- a/AZ-900 Microsoft Azure Fundamentals/3.1.2. Containers.md
+++ b/AZ-900 Microsoft Azure Fundamentals/3.1.2. Containers.md
@@ -79,9 +79,12 @@
   - Easier for new team members to get started
 - Each micro-service is completely autonomous with no cross-dependencies.
   - Provides fault isolation: If one goes down, it does not take out all application
-- Communicate with each other using APIs
-  - Internal functionality is encapsulated (Internal implementation details of each services are encapsulated behind their interface.)
-  - You'd want to reduce interdependencies and introduce orchestration / management layer in the higher level consuming application to coordinate calls & combines results
+- Communicates with each other using APIs.
+  - APIs encapsulate internal functionality.
+    - Internal implementation details of each services are encapsulated behind their interface.
+  - 💡Good practices:
+    - Reduce interdependencies
+    - Introduce orchestration / management layer in the higher level consuming application to coordinate calls and combine results.
 - 💡 Good for:
   - High release velocity
   - Highly scalable applications
