Typo + rewritten sentence
👍

--- a/AZ-900 Microsoft Azure Fundamentals/1.5. Scaling.md
+++ b/AZ-900 Microsoft Azure Fundamentals/1.5. Scaling.md
@@ -16,8 +16,8 @@
 
 ## Scale down or scale in
 
-- Do if you needed to scale up or scale out only temporarily.
-- Help you save money.
+- Do if you need to scale up or only temporarily scale out.
+- Helps you save money.
 - Services that help you optimize cloud spend:
   - Azure Advisor, Azure Cost Management
   - You can use these to identify where you're using more than you need
