--- a/AZ-900 Microsoft Azure Fundamentals/2. Azure Basics.md
+++ b/AZ-900 Microsoft Azure Fundamentals/2. Azure Basics.md
@@ -23,7 +23,7 @@
   - Uses an abstraction layer called **hypervisor**.
     - Separates tight coupling between hardware (CPU, RAM, GPU..) and its operating system
     - Emulates a real computer in a **virtual machine**
-      - Can run multiple virtual machines in same time
+      - Can run multiple virtual machines at the same time
       - Optimizes capacity of abstracted hardware
       - Can run any OS such as Windows, Linux & macOS
 - Azure repeats virtualization in massive scale
