--- a/AZ-900 Microsoft Azure Fundamentals/1.2. Cloud Deployment Models (Public vs Private vs Hybrid Cloud).md
+++ b/AZ-900 Microsoft Azure Fundamentals/1.2. Cloud Deployment Models (Public vs Private vs Hybrid Cloud).md
@@ -58,7 +58,7 @@
 - **Example use cases**
   - Host a website in the public cloud and link it to a highly secure database hosted in your private cloud (or on-premises datacenter).
   - Some specific pieces of data that cannot be exposed publicly (such as medical data) which needs to be held in your private datacenter.
-  - An application that run on old hardware that can't be updated. Keep the old system & connect it to the public cloud for authorization or storage.
+  - An application that runs on old hardware that can't be updated. Keep the old system & connect it to the public cloud for authorization or storage.
 
 ### Advantages of hybrid cloud
 
