Update 3. Azure Services.md
Fixed grammatical error.

--- a/AZ-900 Microsoft Azure Fundamentals/3. Azure Services.md
+++ b/AZ-900 Microsoft Azure Fundamentals/3. Azure Services.md
@@ -2,7 +2,7 @@
 
 - 📝 Microsoft notifies at least 1 months before ending support for an Azure service that does NOT have a successor service.
 - **App Hosting**
-  - Run entire your web application on a managed platform on Linux & Windows
+  - Run your entire web application on a managed platform on Linux & Windows
   - In Azure Marketplace there are huge range of third party products you can run on Azure
     - Including SAP & SQL database solutions
 - **Integration**
