--- a/AZ-304 Microsoft Azure Architect Design/1.2. Security - Azure data centers.md
+++ b/AZ-304 Microsoft Azure Architect Design/1.2. Security - Azure data centers.md
@@ -1,6 +1,6 @@
 # Azure data centers
 
-- Azure data centers are secured by using different technical isoalations.
+- Azure data centers are secured by using different technical isolations.
 - Based on following components:
   - [Azure Fabric Controller](#azure-fabric-controller-fc)
   - [Virtualization](#virtualization)
