Corrected typo mistake 3.3.1. Load Balancing.md

--- a/AZ-900 Microsoft Azure Fundamentals/3.3.1. Load Balancing.md
+++ b/AZ-900 Microsoft Azure Fundamentals/3.3.1. Load Balancing.md
@@ -48,7 +48,7 @@
     - Route traffic based on URL patterns, source IP address and port to destination IP address and port.
     - Helpful when setting up a [content delivery network](#azure-content-delivery-network).
   - **Rewrite HTTP headers**
-    - Addadd or remove information from the inbound and outbound HTTP headers of each request to enable important security scenarios, or scrub sensitive information such as server names.
+    - Add or remove information from the inbound and outbound HTTP headers of each request to enable important security scenarios, or scrub sensitive information such as server names.
 
 ## Azure Content Delivery Network
 
