--- a/AZ-900 Microsoft Azure Fundamentals/3.1.2. Containers.md
+++ b/AZ-900 Microsoft Azure Fundamentals/3.1.2. Containers.md
@@ -45,7 +45,7 @@
 - Combines container management automation with an API
 - Cloud-native: Can run across different clouds
 - **Pod management**
-  - Manages placement of pods
+  - A pod is a group of one or more containers that share the same network namespace and can communicate with eachother via 'localhost'
   - 1 pod = 1 or more containers on a node
     - If node is removed = Kubernetes move affected workloads to different node.
   - If one pod crashes = Kubernetes creates new instance
@@ -80,6 +80,7 @@
 - Each micro-service is completely autonomous with no cross-dependencies.
   - Provides fault isolation: If one goes down, it does not take out all application
 - Communicates with each other using APIs.
+- Application Programming Interface \(API\)
   - APIs encapsulate internal functionality.
     - Internal implementation details of each services are encapsulated behind their interface.
   - 💡Good practices:
