--- a/AZ-900 Microsoft Azure Fundamentals/3.1.2. Containers.md
+++ b/AZ-900 Microsoft Azure Fundamentals/3.1.2. Containers.md
@@ -79,8 +79,7 @@
   - Easier for new team members to get started
 - Each micro-service is completely autonomous with no cross-dependencies.
   - Provides fault isolation: If one goes down, it does not take out all application
-- Communicates with each other using APIs.
-- Application Programming Interface \(API\)
+- Communicates with each other using Application Programming Interface \(API\)
   - APIs encapsulate internal functionality.
     - Internal implementation details of each services are encapsulated behind their interface.
   - 💡Good practices:
