Update 1.1. Benefits of Cloud Computing.md
isn't a more accurate description for " vertical scaling" that you are switching for a more powerful machine

--- a/AZ-900 Microsoft Azure Fundamentals/1.1. Benefits of Cloud Computing.md
+++ b/AZ-900 Microsoft Azure Fundamentals/1.1. Benefits of Cloud Computing.md
@@ -23,7 +23,7 @@
     - Adding more servers that function together as one unit
   - **Vertical scaling**
     - Scaling "up"
-    - Adding resources to increase the power of an existing server
+    - switching out for a more powerful machine ( ex for a machine with more memory)
       - e.g.Add more CPUs, or add more memory
 - Scaling can be done manually or automatically based on e.g.
   - specific triggers such as CPU utilization
